--- a/css/gray.css
+++ b/css/gray.css
@@ -176,7 +176,7 @@ section p {
 }
 
 .section2 {
-  background-image: url('../imagens/sujeira2.png'); 
+  background-image: url('../imagens/textura-sujeira2.png'); 
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
